--- a/galive_server_logic/src/main/resources/web/invite.html
+++ b/galive_server_logic/src/main/resources/web/invite.html
@@ -9,6 +9,7 @@
 
 
 <script src="js/jquery-2.2.3.min.js"></script>
+<script src="js/fingerprint2.js"></script>
 <script src="js/invite.js"></script>
 
 
