--- a/galive_server_logic/src/main/resources/web/invite.html
+++ b/galive_server_logic/src/main/resources/web/invite.html
@@ -7,18 +7,19 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="apple-itunes-app" content="app-id=432274380">
 
-
 <script src="js/jquery-2.2.3.min.js"></script>
 <script src="js/fingerprint2.js"></script>
 <script src="js/invite.js"></script>
 
 
-<style media="screen">
-	
+<style>
+.hide {
+	display: none;
+}
 </style>
 
 </head>
 <body>
-<h1>请在safari中打开链接</h1>
+	<p id="tips">请在safari中打开链接</p>
 </body>
 </html>
