--- a/galive_server_logic/src/main/resources/web/invite.html
+++ b/galive_server_logic/src/main/resources/web/invite.html
@@ -8,8 +8,10 @@
 <meta name="apple-itunes-app" content="app-id=432274380">
 
 <script src="js/jquery-2.2.3.min.js"></script>
-<script src="js/fingerprint2.js"></script>
-<script src="js/invite.js"></script>
+<!-- <script src="js/fingerprint2.js"></script> -->
+<script src="http://222.73.60.153/js/fingerprint2.js"></script>
+<script src="http://222.73.60.153/js/invite.js"></script>
+<!-- <script src="js/invite.js"></script> -->
 
 
 <style>
