--- a/galive_server_logic/src/main/resources/web/invite.html
+++ b/galive_server_logic/src/main/resources/web/invite.html
@@ -8,20 +8,46 @@
 <meta name="apple-itunes-app" content="app-id=432274380">
 
 <script src="js/jquery-2.2.3.min.js"></script>
-<!-- <script src="js/fingerprint2.js"></script> -->
-<script src="http://222.73.60.153/js/fingerprint2.js"></script>
-<script src="http://222.73.60.153/js/invite.js"></script>
-<!-- <script src="js/invite.js"></script> -->
+<script src="js/invite.js"></script>
 
 
 <style>
-.hide {
-	display: none;
+body {
+	background: rgb(254, 207, 53);
+	text-align: center;
+	overflow: hidhen;
+}
+
+div {
+	margin: 50% auto;
+	width: 120px;
+	height: 300px;
+}
+
+img {
+	width: 120px;
+	display: block;
+}
+
+span {
+	padding:6px 12px;
+	margin-top: 20px;
+	margin: 20px auto 0 auto;
+	color: white;
+	display: block;
+	background: black;
+	font-size: 18px;
+	-moz-border-radius: 8px; 
+	-webkit-border-radius: 8px; 
+	border-radius: 8px;
+	-moz-border-radius: 8px；
 }
 </style>
 
 </head>
 <body>
-	<p id="tips">请在safari中打开链接</p>
+	<div>
+		<img src="img/app_icon.png" /> <span>点我打开</span>
+	</div>
 </body>
 </html>
