--- a/galive_server_logic/src/main/resources/web/invite.html
+++ b/galive_server_logic/src/main/resources/web/invite.html
@@ -40,7 +40,7 @@ span {
 	-moz-border-radius: 8px; 
 	-webkit-border-radius: 8px; 
 	border-radius: 8px;
-	-moz-border-radius: 8px；
+	-moz-border-radius: 8px;
 }
 </style>
 
